--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "test": "jest --detectOpenHandles --runInBand --forceExit",
     "test:watch": "jest --onlyChanged --watch",
     "test:branch": "jest --coverage --changedSince=main --watch --coverageThreshold='{\"global\":{\"statements\":\"60\",\"branches\":\"60\",\"functions\":\"60\",\"lines\":\"60\"}}'",
-    "lint:staged": "eslint client/src --ext .js",
+    "lint:staged": "eslint client/src --ext .js && eslint server --ext .js",
     "lint:fix": "prettier --write \"**/**/*.{js,jsx,json,md}\" \"!**/build/*\"",
     "pre-commit": "lint-staged",
     "husky:remove": "rm -f .husky/pre-commit && rm -f .husky/pre-push",
@@ -89,7 +89,7 @@
     "jest": "^26.6.3",
     "jest-watch-typeahead": "^0.6.4",
     "joi": "^17.4.2",
-    "prettier": "^2.5.1",
+    "prettier": "2.5.1",
     "style-loader": "^3.3.0",
     "web-vitals": "^1.1.2",
     "webpack-cli": "^4.8.0",
