add output file for coverage

--- a/package.json
+++ b/package.json
@@ -16,9 +16,9 @@
     "dev": "webpack serve --config ./webpack.dev.config.js",
     "start": "node server/index.js",
     "build": "webpack --config ./webpack.prod.config.js",
-    "test": "jest --detectOpenHandles --runInBand --forceExit",
+    "test": "jest --detectOpenHandles --runInBand --forceExit --outputFile=report.json",
     "test:watch": "jest --onlyChanged --watch",
-    "test:branch": "jest --coverage --changedSince=main --watch --coverageThreshold='{\"global\":{\"statements\":\"60\",\"branches\":\"60\",\"functions\":\"60\",\"lines\":\"60\"}}'",
+    "test:branch": "jest --coverage --changedSince=main --watch --coverageThreshold='{\"global\":{\"statements\":\"60\",\"branches\":\"60\",\"functions\":\"60\",\"lines\":\"60\"}}' --outputFile=report.json",
     "lint:staged": "eslint client/src --ext .js && eslint server --ext .js",
     "lint:fix": "prettier --write \"**/**/*.{js,jsx,json,md}\" \"!**/build/*\"",
     "pre-commit": "lint-staged",
