--- a/package.json
+++ b/package.json
@@ -16,10 +16,10 @@
     "dev": "webpack serve --config ./webpack.dev.config.js",
     "start": "node server/index.js",
     "build": "webpack --config ./webpack.prod.config.js",
-    "test": "jest --detectOpenHandles --runInBand --forceExit",
+    "test": "jest --detectOpenHandles --runInBand --forceExit --outputFile=report.json",
     "test:watch": "jest --onlyChanged --watch",
-    "test:branch": "jest --coverage --changedSince=main --watch --coverageThreshold='{\"global\":{\"statements\":\"60\",\"branches\":\"60\",\"functions\":\"60\",\"lines\":\"60\"}}'",
-    "lint:staged": "eslint client/src --ext .js",
+    "test:branch": "jest --coverage --changedSince=main --watch --coverageThreshold='{\"global\":{\"statements\":\"60\",\"branches\":\"60\",\"functions\":\"60\",\"lines\":\"60\"}}' --outputFile=report.json",
+    "lint:staged": "eslint client/src --ext .js && eslint server --ext .js",
     "lint:fix": "prettier --write \"**/**/*.{js,jsx,json,md}\" \"!**/build/*\"",
     "pre-commit": "lint-staged",
     "husky:remove": "rm -f .husky/pre-commit && rm -f .husky/pre-push",
@@ -62,30 +62,34 @@
     "react-dom": "^17.0.2"
   },
   "devDependencies": {
-    "@babel/eslint-parser": "^7.15.7",
+    "@babel/eslint-parser": "^7.17.0",
     "@babel/plugin-transform-runtime": "^7.15.0",
     "@babel/preset-env": "^7.15.6",
     "@babel/preset-react": "^7.14.5",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "babel-eslint": "^10.0.2",
     "css-loader": "^6.3.0",
     "dotenv": "^10.0.0",
     "dotenv-webpack": "^7.0.3",
-    "eslint": "^7.32.0",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-config-react-app": "^6.0.0",
-    "eslint-plugin-import": "^2.25.2",
-    "eslint-plugin-jest": "^24.4.2",
+    "eslint": "^8.10.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-config-react-app": "^7.0.0",
+    "eslint-plugin-flowtype": "^8.0.3",
+    "eslint-plugin-import": "^2.25.4",
+    "eslint-plugin-jest": "^26.1.1",
+    "eslint-plugin-jsx-a11y": "^6.5.1",
     "eslint-plugin-prettier": "^4.0.0",
-    "eslint-plugin-react": "^7.26.0",
-    "eslint-plugin-testing-library": "^3.10.2",
+    "eslint-plugin-react": "^7.29.3",
+    "eslint-plugin-react-hooks": "^4.3.0",
+    "eslint-plugin-testing-library": "^5.0.6",
     "html-loader": "^2.1.2",
     "html-webpack-plugin": "^5.3.2",
     "jest": "^26.6.3",
     "jest-watch-typeahead": "^0.6.4",
     "joi": "^17.4.2",
-    "prettier": "^2.4.1",
+    "prettier": "2.5.1",
     "style-loader": "^3.3.0",
     "web-vitals": "^1.1.2",
     "webpack-cli": "^4.8.0",
