--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -49,7 +49,8 @@ jobs:
       - name: ✅  Run tests
         run: npm run test -- --coverage
 
-      # - name: 🌪️ Publish to coveralls.io
-      #   uses: coverallsapp/github-action@v1.1.2
-      #   with:
-      #     github-token: ${{ secrets.GITHUB_TOKEN }}
+      - name: 🔮 Publish test coverage
+        continue-on-error: true
+        uses: coverallsapp/github-action@v1.1.2
+        with:
+          github-token: ${{ secrets.GITHUB_TOKEN }}
