--- a/server/.huskyrc
+++ b/server/.huskyrc
@@ -1,6 +1,7 @@
 {
   "hooks": {
-    "pre-commit": "lint-staged && npm run test",
+    "pre-commit": "npx lint-staged",
+    "pre-push": "npm test",
     "commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
   }
 }
