--- a/client/package.json
+++ b/client/package.json
@@ -21,8 +21,9 @@
     "test:branch": "jest --coverage --changedSince=main --watch --coverageThreshold='{\"global\":{\"statements\":\"60\",\"branches\":\"60\",\"functions\":\"60\",\"lines\":\"60\"}}' --outputFile=report.json",
     "lint:staged": "eslint src --ext .js",
     "lint:fix": "prettier --write \"**/**/*.{js,jsx,json,md}\" \"!**/build/*\"",
+    "husky:remove": "rm -f .husky/pre-push",
     "create:prepush": "npx husky add .husky/pre-push \"cd client && npx lint-staged --config .lintstagedrc && npm test\"",
-    "prepare": "cd ../ && husky install client/.husky && cd ./client && npm run create:prepush"
+    "prepare": "npm run husky:remove && cd ../ && husky install client/.husky && cd ./client && npm run create:prepush"
   },
   "browserslist": {
     "production": [
