--- a/server/package.json
+++ b/server/package.json
@@ -20,8 +20,9 @@
     "test:branch": "jest --coverage --changedSince=main --watch --coverageThreshold='{\"global\":{\"statements\":\"60\",\"branches\":\"60\",\"functions\":\"60\",\"lines\":\"60\"}}' --outputFile=report.json",
     "lint:staged": "eslint src --ext .js",
     "lint:fix": "prettier --write \"**/**/*.{js,jsx,json,md}\" \"!**/build/*\"",
-    "create:prepush": "npx husky add .husky/pre-push \"cd server && npx lint-staged --config .lintstagedrc && npm test\" && git add .husky/pre-push",
-    "prepare": "cd ../ && husky install server/.husky && cd ./server && npm run create:prepush"
+    "husky:remove": "rm -f .husky/pre-push",
+    "create:prepush": "npx husky add .husky/pre-push \"cd server && npx lint-staged --config .lintstagedrc && npm test\"",
+    "prepare": "npm run husky:remove && cd ../ && husky install server/.husky && cd ./server && npm run create:prepush"
   },
   "browserslist": {
     "production": [
