--- a/client/package.json
+++ b/client/package.json
@@ -38,6 +38,7 @@
     ]
   },
   "dependencies": {
+    "axios": "^0.26.1",
     "babel-loader": "^8.2.2",
     "compression-webpack-plugin": "^9.0.0",
     "coveralls": "^3.1.1",
