--- a/.github/workflows/branch.yml
+++ b/.github/workflows/branch.yml
@@ -11,12 +11,81 @@ on:
 
 env:
   CI: true
-  NODE_ENV: test
+  NODE_ENV: development
   PORT: 3000
+  MONGODB_URL: mongodb://127.0.0.1:27017/test
 
 jobs:
-  branch_check:
+  services:
+    mongodb:
+        image: mongo
+        env:
+          MONGO_INITDB_ROOT_USERNAME: test
+          MONGO_INITDB_ROOT_PASSWORD: password
+          MONGO_INITDB_DATABASE: test
+        options: >-
+          --health-cmd mongo
+          --health-interval 10s
+          --health-timeout 5s
+          --health-retries 5
+        ports:
+          - 27017:27017
+
+  client-tests:
     runs-on: ${{ matrix.os }}
+    env:
+      REACT_APP_FIREBASE_API_KEY: asdf
+      REACT_APP_FIREBASE_AUTH_DOMAIN: asdf
+      REACT_APP_FIREBASE_PROJECT_ID: asdf
+      REACT_APP_FIREBASE_STORAGE_BUCKET: asdf
+      REACT_APP_FIREBASE_MESSAGING_SENDER_ID: asdf
+      REACT_APP_FIREBASE_APP_ID: asdf
+      REACT_APP_FIREBASE_MEASUREMENT_ID: asdf
+      API_URL: asdf
+      working-directory: ./client
+    strategy:
+      fail-fast: false
+      matrix:
+        node: ['16']
+        os: [ubuntu-latest]
+
+    name: Node ${{ matrix.node }} on ${{ matrix.os }}
+    steps:
+      - name: ♻️ Check out Git Repository
+        uses: actions/checkout@v2
+
+      - name: 🔖  Set up Node
+        uses: actions/setup-node@v1
+        with:
+          node-version: ${{ matrix.node }}
+
+      - name: Cache node modules
+        uses: actions/cache@v2
+        env:
+          cache-name: cache-node-modules
+        with:
+          # npm cache files are stored in `~/.npm` on Linux/macOS
+          path: ~/.npm
+          key: ${{ runner.os }}-build-${{ env.cache-name }}-${{ hashFiles('**/package-lock.json') }}
+          restore-keys: |
+            ${{ runner.os }}-build-${{ env.cache-name }}-
+            ${{ runner.os }}-build-
+            ${{ runner.os }}-
+
+      - name: ⬇️  Install npm dependencies
+        run: npm install
+
+      - name: 🧽 Lint all files
+        run: npm run lint:staged
+
+      - name: ✅  Run tests
+        run: npm run test -- --coverage
+
+  server-tests:
+    runs-on: ${{ matrix.os }}
+    env:
+      FRONTEND_URL: http://localhost:3000
+      working-directory: ./server
     strategy:
       fail-fast: false
       matrix:
@@ -54,13 +123,3 @@ jobs:
 
       - name: ✅  Run tests
         run: npm run test -- --coverage
-
-      - name: 🔮 Report test coverage
-        continue-on-error: true
-        if: github.event_name == 'pull_request'
-        uses: artiomtr/jest-coverage-report-action@v2.0-rc.5
-        with:
-          github-token: ${{ secrets.GITHUB_TOKEN }}
-          skip-step: all
-          # threshold: 60 # optional parameter
-          test-script: npm run test -- --ci --json --coverage --testLocationInResults --outputFile=report.json
