--- a/server/package.json
+++ b/server/package.json
@@ -8,34 +8,21 @@
     "url": "https://github.com/spencerlepine/woofer"
   },
   "keywords": [
-    "react",
+    "node",
     "express"
   ],
   "license": "MIT",
   "scripts": {
-    "dev": "webpack serve --config ./webpack.dev.config.js",
-    "start": "node server/index.js",
-    "build": "webpack --config ./webpack.prod.config.js",
-    "test": "jest --detectOpenHandles --runInBand --forceExit --outputFile=report.json",
+    "dev": "nodemon src/index.js",
+    "start": "node src/index.js",
+    "test": "jest --detectOpenHandles --runInBand --forceExit",
     "test:watch": "jest --onlyChanged --watch",
     "test:branch": "jest --coverage --changedSince=main --watch --coverageThreshold='{\"global\":{\"statements\":\"60\",\"branches\":\"60\",\"functions\":\"60\",\"lines\":\"60\"}}' --outputFile=report.json",
-    "lint:staged": "eslint client/src --ext .js && eslint server --ext .js",
+    "lint:staged": "eslint src --ext .js",
     "lint:fix": "prettier --write \"**/**/*.{js,jsx,json,md}\" \"!**/build/*\"",
-    "pre-commit": "lint-staged",
-    "husky:remove": "rm -f .husky/pre-commit && rm -f .husky/pre-push",
-    "create-hook": "npm run husky:remove && husky add .husky/pre-commit 'npm run pre-commit' && husky add .husky/pre-push 'npm test'",
-    "prepare": "husky install && npm run create-hook"
-  },
-  "hooks": {
-    "pre-commit": "lint-staged && npm run test",
-    "commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
-  },
-  "lint-staged": {
-    "*.{js,json,md}": [
-      "prettier --write"
-    ],
-    "*.js": "eslint --cache --fix",
-    "*.{js,md}": "prettier --write"
+    "husky:remove": "rm -f .husky/pre-push",
+    "create:prepush": "npx husky add .husky/pre-push \"cd server && npx lint-staged --config .lintstagedrc && npm test\"",
+    "prepare": "npm run husky:remove && cd ../ && husky install server/.husky && cd ./server && npm run create:prepush"
   },
   "browserslist": {
     "production": [
@@ -51,8 +38,7 @@
   },
   "dependencies": {
     "axios": "^0.21.4",
-    "babel-loader": "^8.2.2",
-    "compression-webpack-plugin": "^9.0.0",
+    "compression": "^1.7.4",
     "cors": "^2.8.5",
     "coveralls": "^3.1.1",
     "express": "^4.17.1",
@@ -60,13 +46,10 @@
     "express-rate-limit": "^6.3.0",
     "helmet": "^5.0.2",
     "http-status": "^1.5.0",
-    "husky": "^7.0.4",
     "lint-staged": "^11.2.3",
     "mongoose": "^6.2.5",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.13",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
     "winston": "^3.6.0",
     "xss-clean": "^0.1.1"
   },
@@ -74,34 +57,18 @@
     "@babel/eslint-parser": "^7.17.0",
     "@babel/plugin-transform-runtime": "^7.15.0",
     "@babel/preset-env": "^7.15.6",
-    "@babel/preset-react": "^7.14.5",
-    "@testing-library/jest-dom": "^5.14.1",
-    "@testing-library/react": "^11.2.7",
-    "@testing-library/user-event": "^12.8.3",
     "babel-eslint": "^10.0.2",
-    "css-loader": "^6.3.0",
     "dotenv": "^10.0.0",
-    "dotenv-webpack": "^7.0.3",
     "eslint": "^8.10.0",
-    "eslint-config-prettier": "^8.5.0",
-    "eslint-config-react-app": "^7.0.0",
-    "eslint-plugin-flowtype": "^8.0.3",
     "eslint-plugin-import": "^2.25.4",
     "eslint-plugin-jest": "^26.1.1",
-    "eslint-plugin-jsx-a11y": "^6.5.1",
     "eslint-plugin-prettier": "^4.0.0",
-    "eslint-plugin-react": "^7.29.3",
-    "eslint-plugin-react-hooks": "^4.3.0",
-    "eslint-plugin-testing-library": "^5.0.6",
     "html-loader": "^2.1.2",
-    "html-webpack-plugin": "^5.3.2",
+    "husky": "^7.0.4",
     "jest": "^26.6.3",
     "jest-watch-typeahead": "^0.6.4",
     "joi": "^17.4.2",
     "prettier": "2.5.1",
-    "style-loader": "^3.3.0",
-    "web-vitals": "^1.1.2",
-    "webpack-cli": "^4.8.0",
-    "webpack-dev-server": "^4.3.0"
+    "supertest": "^6.2.2"
   }
 }
