fix workflow typo

--- a/.github/workflows/branch.yml
+++ b/.github/workflows/branch.yml
@@ -54,6 +54,8 @@ jobs:
     steps:
       - name: ♻️ Check out Git Repository
         uses: actions/checkout@v2
+        with:
+          persist-credentials: false
 
       - name: 🔖  Set up Node
         uses: actions/setup-node@v1
@@ -112,6 +114,8 @@ jobs:
     steps:
       - name: ♻️ Check out Git Repository
         uses: actions/checkout@v2
+        with:
+          persist-credentials: false
 
       - name: 🔖  Set up Node
         uses: actions/setup-node@v1
