--- a/.github/workflows/branch.yml
+++ b/.github/workflows/branch.yml
@@ -57,6 +57,11 @@ jobs:
         with:
           persist-credentials: false
 
+        name: Reconfigure git to use HTTP authentication
+          run: >
+            git config --global url."https://github.com/".insteadOf
+            ssh://git@github.com/
+
       - name: 🔖  Set up Node
         uses: actions/setup-node@v1
         with:
@@ -116,6 +121,11 @@ jobs:
         uses: actions/checkout@v2
         with:
           persist-credentials: false
+
+        name: Reconfigure git to use HTTP authentication
+          run: >
+            git config --global url."https://github.com/".insteadOf
+            ssh://git@github.com/
 
       - name: 🔖  Set up Node
         uses: actions/setup-node@v1
