fix workflow npm error

--- a/.github/workflows/branch.yml
+++ b/.github/workflows/branch.yml
@@ -57,7 +57,7 @@ jobs:
         with:
           persist-credentials: false
 
-        name: Reconfigure git to use HTTP authentication
+        - name: Reconfigure git to use HTTP authentication
           run: >
             git config --global url."https://github.com/".insteadOf
             ssh://git@github.com/
@@ -122,7 +122,7 @@ jobs:
         with:
           persist-credentials: false
 
-        name: Reconfigure git to use HTTP authentication
+        - name: Reconfigure git to use HTTP authentication
           run: >
             git config --global url."https://github.com/".insteadOf
             ssh://git@github.com/
