--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -56,7 +56,7 @@ jobs:
         with:
           persist-credentials: false
 
-        name: Reconfigure git to use HTTP authentication
+        - name: Reconfigure git to use HTTP authentication
           run: >
             git config --global url."https://github.com/".insteadOf
             ssh://git@github.com/
@@ -121,7 +121,7 @@ jobs:
         with:
           persist-credentials: false
 
-        name: Reconfigure git to use HTTP authentication
+        - name: Reconfigure git to use HTTP authentication
           run: >
             git config --global url."https://github.com/".insteadOf
             ssh://git@github.com/
