--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -56,15 +56,12 @@ jobs:
         with:
           persist-credentials: false
 
-        - name: Reconfigure git to use HTTP authentication
-          run: >
-            git config --global url."https://github.com/".insteadOf
-            ssh://git@github.com/
-
       - name: 🔖  Set up Node
         uses: actions/setup-node@v1
         with:
           node-version: ${{ matrix.node }}
+
+      - run: git config --global url."https://github.com/".insteadOf ssh://git@github.com/
 
       - name: Cache node modules
         uses: actions/cache@v2
@@ -79,8 +76,8 @@ jobs:
             ${{ runner.os }}-build-
             ${{ runner.os }}-
 
-      - name: ⬇️  Install npm dependencies
-        run: npm install
+      - name: ⬇️  Install packages
+        run: npm ci
 
       - name: 🧽 Lint all files
         run: npm run lint:staged
@@ -121,15 +118,12 @@ jobs:
         with:
           persist-credentials: false
 
-        - name: Reconfigure git to use HTTP authentication
-          run: >
-            git config --global url."https://github.com/".insteadOf
-            ssh://git@github.com/
-
       - name: 🔖  Set up Node
         uses: actions/setup-node@v1
         with:
           node-version: ${{ matrix.node }}
+
+      - run: git config --global url."https://github.com/".insteadOf ssh://git@github.com/
 
       - name: Cache node modules
         uses: actions/cache@v2
@@ -144,8 +138,8 @@ jobs:
             ${{ runner.os }}-build-
             ${{ runner.os }}-
 
-      - name: ⬇️  Install npm dependencies
-        run: npm install
+      - name: ⬇️  Install packages
+        run: npm ci
 
       - name: 🧽 Lint all files
         run: npm run lint:staged
