remove npm ci from action

--- a/.github/workflows/branch.yml
+++ b/.github/workflows/branch.yml
@@ -78,7 +78,7 @@ jobs:
             ${{ runner.os }}-
 
       - name: ⬇️  Install packages
-        run: npm ci
+        run: npm install
 
       - name: 🧽 Lint all files
         run: npm run lint:staged
@@ -140,7 +140,7 @@ jobs:
             ${{ runner.os }}-
 
       - name: ⬇️  Install packages
-        run: npm ci
+        run: npm install
 
       - name: 🧽 Lint all files
         run: npm run lint:staged
