--- a/.github/workflows/branch.yml
+++ b/.github/workflows/branch.yml
@@ -63,6 +63,7 @@ jobs:
           node-version: ${{ matrix.node }}
 
       - run: git config --global url."https://github.com/".insteadOf ssh://git@github.com/
+      - run: cd ./client
 
       - name: Cache node modules
         uses: actions/cache@v2
@@ -125,6 +126,7 @@ jobs:
           node-version: ${{ matrix.node }}
 
       - run: git config --global url."https://github.com/".insteadOf ssh://git@github.com/
+      - run: cd ./server
 
       - name: Cache node modules
         uses: actions/cache@v2
