--- a/.github/workflows/branch.yml
+++ b/.github/workflows/branch.yml
@@ -63,7 +63,6 @@ jobs:
           node-version: ${{ matrix.node }}
 
       - run: git config --global url."https://github.com/".insteadOf ssh://git@github.com/
-      - run: cd ./client
 
       - name: Cache node modules
         uses: actions/cache@v2
@@ -77,6 +76,9 @@ jobs:
             ${{ runner.os }}-build-${{ env.cache-name }}-
             ${{ runner.os }}-build-
             ${{ runner.os }}-
+
+      - name: Enter service folder
+        - run: cd ./client
 
       - name: ⬇️  Install packages
         run: npm install
@@ -126,7 +128,6 @@ jobs:
           node-version: ${{ matrix.node }}
 
       - run: git config --global url."https://github.com/".insteadOf ssh://git@github.com/
-      - run: cd ./server
 
       - name: Cache node modules
         uses: actions/cache@v2
@@ -140,6 +141,9 @@ jobs:
             ${{ runner.os }}-build-${{ env.cache-name }}-
             ${{ runner.os }}-build-
             ${{ runner.os }}-
+
+      - name: Enter service folder
+        - run: cd ./server
 
       - name: ⬇️  Install packages
         run: npm install
