fix workflow npm error

--- a/.github/workflows/branch.yml
+++ b/.github/workflows/branch.yml
@@ -78,7 +78,7 @@ jobs:
             ${{ runner.os }}-
 
       - name: Enter service folder
-        - run: cd ./client
+        run: cd ./client
 
       - name: ⬇️  Install packages
         run: npm install
@@ -143,7 +143,7 @@ jobs:
             ${{ runner.os }}-
 
       - name: Enter service folder
-        - run: cd ./server
+        run: cd ./server
 
       - name: ⬇️  Install packages
         run: npm install
