--- a/.github/workflows/branch.yml
+++ b/.github/workflows/branch.yml
@@ -77,7 +77,7 @@ jobs:
             ${{ runner.os }}-
 
       - name: Enter service folder
-        run: cd ./client
+        run: cd ./client && ls
 
       - name: ⬇️  Install packages
         run: npm install
