--- a/.github/workflows/branch.yml
+++ b/.github/workflows/branch.yml
@@ -28,6 +28,7 @@ jobs:
       REACT_APP_FIREBASE_APP_ID: asdf
       REACT_APP_FIREBASE_MEASUREMENT_ID: asdf
       API_URL: asdf
+      working-directory: ./client
     strategy:
       fail-fast: false
       matrix:
@@ -76,22 +77,23 @@ jobs:
             ${{ runner.os }}-build-
             ${{ runner.os }}-
 
-      - name: Enter service folder
-        run: cd ./client && ls
-
       - name: ⬇️  Install packages
+        working-directory: ${{env.working-directory}}
         run: npm install
 
       - name: 🧽 Lint all files
+        working-directory: ${{env.working-directory}}
         run: npm run lint:staged
 
       - name: ✅  Run tests
+        working-directory: ${{env.working-directory}}
         run: npm run test -- --coverage
 
   server-tests:
     runs-on: ${{ matrix.os }}
     env:
       FRONTEND_URL: http://localhost:3000
+      working-directory: ./server
     strategy:
       fail-fast: false
       matrix:
@@ -140,14 +142,14 @@ jobs:
             ${{ runner.os }}-build-
             ${{ runner.os }}-
 
-      - name: Enter service folder
-        run: cd ./server
-
       - name: ⬇️  Install packages
+        working-directory: ${{env.working-directory}}
         run: npm install
 
       - name: 🧽 Lint all files
+        working-directory: ${{env.working-directory}}
         run: npm run lint:staged
 
       - name: ✅  Run tests
+        working-directory: ${{env.working-directory}}
         run: npm run test -- --coverage
