--- a/server/.eslintrc
+++ b/server/.eslintrc
@@ -3,7 +3,9 @@
     "eslint:recommended"
   ],
   "env": {
-    "es6": true
+    "es6": true,
+    "node": true,
+    "jest": true
   },
   "parser": "@babel/eslint-parser",
   "parserOptions": {
