fix workflow typo

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -49,7 +49,7 @@ jobs:
           ports:
             - 27017:27017
 
-    name: [Client] Node ${{ matrix.node }} on ${{ matrix.os }}
+    name: (Client) Node ${{ matrix.node }} on ${{ matrix.os }}
     steps:
       - name: ♻️ Check out Git Repository
         uses: actions/checkout@v2
@@ -112,7 +112,7 @@ jobs:
           ports:
             - 27017:27017
 
-    name: [Server] Node ${{ matrix.node }} on ${{ matrix.os }}
+    name: (Server) Node ${{ matrix.node }} on ${{ matrix.os }}
     steps:
       - name: ♻️ Check out Git Repository
         uses: actions/checkout@v2
