--- a/server/package.json
+++ b/server/package.json
@@ -57,6 +57,7 @@
     "@babel/eslint-parser": "^7.17.0",
     "@babel/plugin-transform-runtime": "^7.15.0",
     "@babel/preset-env": "^7.15.6",
+    "@shelf/jest-mongodb": "^2.2.1",
     "babel-eslint": "^10.0.2",
     "dotenv": "^10.0.0",
     "eslint": "^8.10.0",
