add TEST mongo database connection

--- a/server/.env.sample
+++ b/server/.env.sample
@@ -1,4 +1,5 @@
 NODE_ENV=development
 PORT=3000
 FRONTEND_URL=
-MONGODB_URL=mongodb://127.0.0.1:27017/database
+MONGODB_URL=mongodb+srv://admin:<PASSWORD>@cluster9.sadf.mongodb.net/myFirstDatabase?retryWrites=true&w=majority
+LOCAL_MONGODB_URL=mongodb://127.0.0.1:27017/database
