--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,6 +13,8 @@ env:
   NODE_ENV: development
   PORT: 3000
   MONGODB_URL: mongodb://127.0.0.1:27017/test
+  LOCAL_MONGODB_URL: mongodb://127.0.0.1:27017/test
+
 
 jobs:
 
