--- a/server/package.json
+++ b/server/package.json
@@ -21,7 +21,8 @@
     "lint:staged": "eslint src --ext .js",
     "lint:fix": "prettier --write \"**/**/*.{js,jsx,json,md}\" \"!**/build/*\"",
     "husky:remove": "rm -f .husky/pre-push",
-    "create:prepush": "npx husky add .husky/pre-push \"cd server && npx lint-staged --config .lintstagedrc && npm test\"",
+    "broken:prepush": "npx husky add .husky/pre-push \"cd server && npx lint-staged --config .lintstagedrc && npm test\"",
+    "create:prepush": "npx husky add .husky/pre-push \"cd server && npm run lint:staged && npm test\"",
     "prepare": "npm run husky:remove && cd ../ && husky install server/.husky && cd ./server && npm run create:prepush"
   },
   "browserslist": {
