--- a/server/package.json
+++ b/server/package.json
@@ -48,6 +48,7 @@
     "helmet": "^5.0.2",
     "http-status": "^1.5.0",
     "lint-staged": "^11.2.3",
+    "mongodb-memory-server": "^8.4.1",
     "mongoose": "^6.2.5",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.13",
