--- a/server/package.json
+++ b/server/package.json
@@ -18,7 +18,8 @@
     "test": "jest --detectOpenHandles --runInBand --forceExit",
     "test:watch": "jest --watch",
     "test:branch": "jest --watch --changedSince=main",
-    "test:coverage": "jest --coverage --coverageThreshold='{\"global\":{\"statements\":\"60\",\"branches\":\"60\",\"functions\":\"60\",\"lines\":\"60\"}}' --outputFile=report.json"
+    "test:coverage": "jest --coverage --coverageThreshold='{\"global\":{\"statements\":\"60\",\"branches\":\"60\",\"functions\":\"60\",\"lines\":\"60\"}}' --outputFile=report.json",
+    "prepare": "husky install"
   },
   "browserslist": {
     "production": [
@@ -64,16 +65,17 @@
     "@shelf/jest-mongodb": "^2.2.1",
     "babel-eslint": "^10.0.2",
     "dotenv": "^10.0.0",
-    "eslint": "^8.10.0",
+    "eslint": "^8.11.0",
+    "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-import": "^2.25.4",
     "eslint-plugin-jest": "^26.1.1",
     "eslint-plugin-prettier": "^4.0.0",
     "html-loader": "^2.1.2",
-    "husky": "^7.0.4",
+    "husky": "^7.0.0",
     "jest": "^26.6.3",
     "jest-watch-typeahead": "^0.6.4",
     "joi": "^17.4.2",
-    "prettier": "2.5.1",
+    "prettier": "^2.5.1",
     "supertest": "^6.2.2"
   }
 }
