--- a/client/package.json
+++ b/client/package.json
@@ -43,10 +43,13 @@
     "compression-webpack-plugin": "^9.0.0",
     "coveralls": "^3.1.1",
     "express": "^4.17.1",
+    "firebase": "^8.10.1",
+    "history": "^5.3.0",
     "husky": "^7.0.4",
     "lint-staged": "^11.2.3",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "react-router-dom": "^5.2.0"
   },
   "devDependencies": {
     "@babel/eslint-parser": "^7.17.0",
