--- a/.eslintrc
+++ b/.eslintrc
@@ -1,12 +1,14 @@
 {
   "extends": [
-    "react-app",
     "eslint:recommended",
-    "plugin:react/recommended"
+    "react-app",
+    "plugin:react/recommended",
+    "plugin:jest/recommended"
   ],
   "env": {
     "es6": true,
-    "browser": true
+    "node": true,
+    "jest": true
   },
   "parser": "@babel/eslint-parser",
   "parserOptions": {
@@ -20,10 +22,17 @@
   "rules": {
     "no-console": "off",
     "no-unused-vars": "off",
-    "react/prop-types": "off"
+    "react/prop-types": "off",
+    "quotes": [
+      2,
+      "double",
+      {
+        "avoidEscape": true
+      }
+    ]
   },
   "plugins": [
-    "react",
-    "prettier"
+    "prettier",
+    "react"
   ]
 }
