--- a/.env.sample
+++ b/.env.sample
@@ -1,4 +1,5 @@
 NODE_ENV=development
+SERVER_URL=http://localhost:3000
 PORT=3000
 MONGODB_URL=mongodb+srv://admin:<PASSWORD>@cluster9.sadf.mongodb.net/myFirstDatabase?retryWrites=true&w=majority
 LOCAL_MONGODB_URL=mongodb://127.0.0.1:27017/database
