--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
   "license": "MIT",
   "scripts": {
     "start": "node server/src/index.js",
-    "dev": "nodemon server/src/index.js",
+    "dev:server": "nodemon server/src/index.js",
+    "dev:client": "webpack serve --config ./webpack.dev.config.js",
     "build": "webpack --config ./webpack.prod.config.js",
     "test": "jest --detectOpenHandles --runInBand --forceExit",
     "test:watch": "jest --onlyChanged --watch"
@@ -68,7 +69,7 @@
     "nodemon": "^2.0.15",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-router-dom": "^6.2.2",
+    "react-router-dom": "^5.2.0",
     "style-loader": "^3.3.1",
     "web-vitals": "^2.1.4",
     "webpack-cli": "^4.9.2",
